--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -277,6 +277,9 @@ html[data-theme="dark"] .item-container-desc {
   padding: 0 40px;
 }
 
+.DocSearch-SearchBar {
+  margin-top: 3.8rem;
+}
 /* Base styles for the main button */
 .DocSearch-Button {
   min-width: 300px !important;
@@ -351,7 +354,6 @@ html:not([data-theme="dark"]) kbd.DocSearch-Button-Key {
 
 /* --- Dark Mode --- */
 html[data-theme="dark"] .DocSearch-Button {
-  background-color: #ffffff0d !important;
   border-color: #ffffff3d !important;
 }
 html[data-theme="dark"] .DocSearch-Button-Placeholder {
@@ -614,13 +616,14 @@ html[data-theme="dark"] .toggle-icon.active {
     }
 
     .DocSearch-Button:hover {
-      background-color: var(--ifm-hover-overlay) !important;
+      /* background-color: var(--ifm-hover-overlay) !important; */
+      background: transparent !important;
     }
 
     .DocSearch-Button .DocSearch-Search-Icon {
       /* Make icon bigger */
-      width: 22px !important; /* Increased from 20px */
-      height: 22px !important; /* Keep square aspect ratio */
+      width: 16px !important; /* Increased from 20px */
+      height: 16px !important; /* Keep square aspect ratio */
       color: var(--ifm-navbar-link-color) !important;
       margin: 0 !important; /* Removed invalid margin-top */
       /* Make icon bolder */
