--- a/src/components/navbar/mobileNavbar.module.css
+++ b/src/components/navbar/mobileNavbar.module.css
@@ -47,9 +47,16 @@
 }
 
 /* --- Logo Image --- */
-.logoImage {
+
+.darkLogo {
   display: block; /* block */
-  height: 1.75rem; /* h-7 */
+  height: 1rem; /* h-7 */
+  width: auto; /* w-auto */
+}
+
+.lightLogo {
+  display: block; /* block */
+  height: 1.5rem; /* h-7 */
   width: auto; /* w-auto */
 }
 
@@ -72,11 +79,11 @@
   display: inline-flex; /* inline-flex */
   align-items: center; /* items-center */
   justify-content: center; /* justify-center */
-  height: 2.25rem; /* h-9 */
-  width: 2.25rem; /* w-9 */
+  height: 1.3rem; /* h-9 */
+  width: 1.3rem; /* w-9 */
   border: 1px solid var(--ifm-color-emphasis-500); /* border border-[...] */
   background-color: var(--ifm-hover-overlay); /* bg-[--ifm-hover-overlay] */
-  border-radius: var(--ifm-global-radius, 0.375rem); /* rounded-md */
+  border-radius: 0.2rem; /* rounded-md */
   cursor: pointer; /* cursor-pointer */
   transition: background-color 0.2s ease, border-color 0.2s ease; /* transition-colors */
 }
@@ -95,22 +102,25 @@ html[data-theme="dark"] .optionsButtonWrapper {
 
 /* --- Options Icon --- */
 .optionsIcon {
-  height: 1.25rem; /* h-5 */
-  width: 1.25rem; /* w-5 */
+  height: 0.8rem; /* h-5 */
+  width: 0.8rem; /* w-5 */
   color: var(--ifm-navbar-link-color); /* text-[--ifm-navbar-link-color] */
 }
 
 /* --- Close Button --- */
 .closeButton {
-  color: var(--ifm-navbar-link-color);
+  /* color: var(--ifm-navbar-link-color); */
   cursor: pointer;
   /* Adjust size/padding/position if needed via this class */
   /* For example, ensure it aligns nicely */
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 2.25rem; /* Match options button tap target size */
-  width: 2.25rem;
+  height: 1rem; /* Match options button tap target size */
+  width: 1rem;
+}
+.closeIcon {
+  color: var(--docs-color-background-400);
 }
 
 .closeButton:hover {
